Phase 2 skeleton: persistence, CLI, real model client, tool skeletons, clean CLI profile